--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <title>Clima</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +13,7 @@
 </head>
 
 <body onload="onLoad()">
-    <div id="contenedor">
+    <div id="contenedor" class="contenedor">
         <div class="fondo">
         <div class="contenedor2">
             <div id="location" ></div><div class="location-svg"><img src="svg/location.svg"/></div>
